deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  node-deployment
  labels:
    name:  node-deployment
spec:
  replicas: 3
  selector:
      matchLabels:
        name: node-app
  template:
    metadata:
      labels:
        name:  node-app
    spec:
      containers:
      - image:  sri14docker/nodeapp:main-411202b
        name:  node-app    
        ports:
        - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: internal-node-service
spec:
  selector:
    name: node-app
  type: ClusterIP
  ports:
  - name: http
    port: 8081
    targetPort: 3001
