node-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  labels:
    name: ingress-resource
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: srinodeapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: internal-node-service
            port:
              number: 8081
